20250110 MM-011 購買申請登録とファイル添付 承认之后条目修改不成功

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -236,6 +236,12 @@
                                             value="{WbsElemnt}"
                                         />
                                     </smartForm:GroupElement>
+                                    <smartForm:GroupElement >
+                                        <smartField:SmartField
+                                            textLabel="{i18n>OrderID}"
+                                            value="{OrderId}"
+                                        />
+                                    </smartForm:GroupElement>
                                     <smartForm:GroupElement id="id24GroupElement">
                                         <smartField:SmartField
                                             id="idAssetNoSmartField"
