--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
@@ -847,6 +847,24 @@
                             </t:template>
                         </t:Column>
                         <t:Column
+                            width="8rem"
+                            label="{i18n>OrderID}"
+                            sortProperty="OrderId"
+                            filterProperty="OrderId"
+                        >
+                            <t:customData>
+                                <core:CustomData
+                                    key="p13nData"
+                                    value='\{"columnKey":"OrderId", "leadingProperty":"OrderId", "sortProperty":"OrderId", "filterProperty": "OrderId"}'
+                                />
+                            </t:customData>
+                            <t:template>
+                                <Text
+                                    text="{OrderId}"
+                                />
+                            </t:template>
+                        </t:Column>
+                        <t:Column
                             id="id24Column"
                             width="8rem"
                             label="{i18n>AssetNo}"
