20250110 MM-011 購買申請登録とファイル添付 i18n修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -238,7 +238,7 @@
                                     </smartForm:GroupElement>
                                     <smartForm:GroupElement >
                                         <smartField:SmartField
-                                            textLabel="{i18n>OrderID}"
+                                            textLabel="{i18n>OrderId}"
                                             value="{OrderId}"
                                         />
                                     </smartForm:GroupElement>
