--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
@@ -848,7 +848,7 @@
                         </t:Column>
                         <t:Column
                             width="8rem"
-                            label="{i18n>OrderID}"
+                            label="{i18n>OrderId}"
                             sortProperty="OrderId"
                             filterProperty="OrderId"
                         >
