--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Upload.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Upload.view.xml
@@ -530,7 +530,7 @@
                     </t:Column>
                     <t:Column
                         width="8rem"
-                        label="{i18n>OrderID}"
+                        label="{i18n>OrderId}"
                     >
                         <t:template>
                             <Text
