SD-026 受注管理レポート 20250205

--- a/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
@@ -137,6 +137,8 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="YY1_ManagementNo_3_SDI" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrency" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="BillingQuantityUnit" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="TotalCountSo" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="TotalCountSoItem" visible="false"/>
                             </smartFilterBar:controlConfiguration>
                         </smartFilterBar:SmartFilterBar>
                     </FlexBox>
