SD-016 出荷伝票外部移転の日付一括更新 抬头计数改修

--- a/sd-s4apps01/zdndatebatchupdate/webapp/view/Display.view.xml
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/view/Display.view.xml
@@ -118,6 +118,8 @@
                 placeToolbarInTable="true"
                 beforeRebindTable="onBeforeRebindTable"
                 showRowCount="false"
+                requestAtLeastFields="UserEmail,RecordCount"
+                ignoredFields="UserEmail,RecordCount"
             >
                 <smartTable:customToolbar>
                     <OverflowToolbar >
