FICO-019&026 長期滞在＆低価法レポート 20250208

--- a/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
+++ b/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
@@ -129,6 +129,8 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="AmountMonth35" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="QuantityMonth36" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="AmountMonth36" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="QuantityUnspecified" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="AmountUnspecified" visible="false"/>
                             </smartFilterBar:controlConfiguration>
                         </smartFilterBar:SmartFilterBar>
                     </FlexBox>
